# erebus-server

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.TXT  build-debian.sh  erebus-version.h.in  generate-debian.sh  update-conan.cmd  update-conan.sh
protocol/: CMakeLists.txt  common.proto  erebus.proto  generate.cmd  generate.sh  protocol.cxx
protocol/erebus/: protocol.hxx
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_app.cxx  client_app.hxx  ping.hxx  runner_base.hxx  system_info.hxx
src/erebus/: CMakeLists.txt  assert.cxx  debug.cxx  errno.cxx  exception.cxx  init.cxx  knownprops.cxx  log.cxx  log2.cxx  luaxx.cxx  program.cxx  stacktrace.cxx  time.cxx  type_id.cxx  variant.cxx
src/erebus-clt/: CMakeLists.txt  erebus-clt.cxx
src/erebus-ctl/: CMakeLists.txt  common.hxx  log.cxx  log.hxx  main.cxx  process.cxx  process.hxx  request_runner.hxx  stream_runner.hxx
src/erebus-desktop/: CMakeLists.txt  appentrymonitor.cxx  desktopentries.cxx  desktopfile.cxx  desktopfile.hxx  desktopfilecache.cxx  desktopfilecache.hxx  erebus-desktop.cxx  iconcache.cxx  iconcache.hxx  iconcacheipc.cxx  iconresolver.cxx  iconresolver.hxx  procfs.cxx  procfs.hxx  service.cxx  service.hxx  util.cxx
src/erebus-processmgr/: CMakeLists.txt  desktopentries.cxx  desktopentries.hxx  desktopentry.cxx  globalscollector.cxx  globalscollector.hxx  iconcache.cxx  iconcache.hxx  iconmanager.cxx  iconmanager.hxx  pathresolver.cxx  pathresolver.hxx  processdetails.cxx  processdetails.hxx  processdetailsservice.cxx  processdetailsservice.hxx  processlist.cxx  processlist.hxx  processlistcollector.cxx  processlistcollector.hxx  processlistdiff.cxx  processlistdiff.hxx  processlistservice.cxx  processlistservice.hxx  processmgr.cxx  processmgrplugin.cxx  procfs.cxx  procfs.hxx
src/erebus-procmon/: CMakeLists.txt  event_type.h  execve.bpf.c  execve.bpf.h  process.bpf.c  process.bpf.h  process_spy.cxx  process_spy.hxx  procmon.cxx  procmon.hxx  sched.bpf.c  sched.bpf.h
src/erebus-procmon/tests/: CMakeLists.txt  forkexec.cpp
src/erebus-server/: CMakeLists.txt  config.cxx  config.hxx  coreservice.cxx  coreservice.hxx  logger.cxx  logger.hxx  main.cxx  pluginmgr.cxx  pluginmgr.hxx  users.cxx  users.hxx
src/erebus-srv/: CMakeLists.txt  auth.hxx  erebus-srv.cxx  erebus.cxx  erebus_service.cxx  erebus_service.hxx  rpc.hxx  svcbase.cxx  svcbase.hxx
src/erebus/log/: async_logger.cxx  file_sink.cxx  ostream_sink.cxx  simple_formatter.cxx  tee.cxx  win32_debugger_sink.cxx
src/erebus/luaxx/: luaxx_base_fun.cxx  luaxx_exception_handler.cxx  luaxx_int64.cxx  luaxx_metatable_registry.cxx  luaxx_property.cxx  luaxx_selector.cxx  luaxx_state.cxx  luaxx_util.cxx
src/erebus/system/: packed_time.cxx  pathresolver.cxx  process.cxx  thread.cxx  time.cxx  timestamp.cxx  user_linux.cxx  user_win32.cxx
src/erebus/util/: cformat.cxx  condition.cxx  exceptionutil.cxx  file.cxx  format.cxx  inifile.cxx  lockfile.cxx  posixerror.cxx  posixerror_posix.cxx  sha256.cxx  signalhandler_posix.cxx  utf16_win32.cxx  win32error_win32.cxx
src/ipc/grpc/: CMakeLists.txt
src/proctree/: CMakeLists.txt  plugin.cxx  process_props.cxx  proctree_service.cxx  proctree_service.hxx  protocol.cxx  trace.hxx
src/proctree/client/: CMakeLists.txt  process_list_client.cxx
src/proctree/linux/: process_props_collector.cxx  process_props_collector.hxx  procfs.cxx
src/proctree/server/: CMakeLists.txt  plugin.cxx  proctree_service.cxx
src/proctree/tests/: CMakeLists.txt  main.cpp  procfs.cpp
src/rtl/: CMakeLists.txt  assert.cxx  debug.cxx  exception.cxx  luaxx.cxx  program.cxx  property.cxx  property2.cxx  property_format.cxx  property_info.cxx  result.cxx  type_id.cxx
src/rtl-lib/: CMakeLists.txt  assert.cxx  error.cxx  exception.cxx  luaxx.cxx  program.cxx  property_bag.cxx  property_format.cxx  stack_trace.cxx  time.cxx  type_id.cxx
src/rtl-lib/logger/: async_logger.cxx  file_sink.cxx  logger.cxx  logger_base.hxx  null_logger.hxx  ostream_sink.cxx  record.cxx  simple_filter.cxx  simple_formatter.cxx  sink_base.hxx  sync_logger.cxx  syslog_linux_sink.cxx  tee.cxx  win32_debugger_sink.cxx
src/rtl-lib/luaxx/: luaxx_int64.cxx  luaxx_state.cxx  luaxx_util.cxx
src/rtl-lib/system/: process.cxx  thread.cxx  user_linux.cxx  user_win32.cxx  win32_error.cxx
src/rtl-lib/tests/: CMakeLists.txt  common.hpp  error.cpp  exception.cpp  luaxx_error.cpp  luaxx_metatable.cpp  luaxx_selector.cpp  main.cpp  pattern.cpp  property.cpp  property_bag.cpp  reflectable.cpp  string_util.cpp
src/rtl-lib/util/: exception_util.cxx  file.cxx  lock_file.cxx  posix_file.cxx  win32_file.cxx  win32_utf16.cxx
src/rtl/logger/: async_logger.cxx  file_sink.cxx  logger.cxx  logger_base.hxx  ostream_sink.cxx  simple_formatter.cxx  sync_logger.cxx  syslog_linux_sink.cxx  tee.cxx  win32_debugger_sink.cxx
src/rtl/luaxx/: luaxx_base_fun.cxx  luaxx_exception_handler.cxx  luaxx_metatable_registry.cxx  luaxx_property.cxx  luaxx_selector.cxx  luaxx_state.cxx  luaxx_util.cxx
src/rtl/system/: packed_time.cxx  posix_error.cxx  process.cxx  user_linux.cxx  user_win32.cxx  win32_error.cxx
src/rtl/tests/: CMakeLists.txt  common.hpp  flags.cpp  luaxx_class.cpp  luaxx_exception.cpp  luaxx_int64.cpp  luaxx_interop.cpp  luaxx_obj.cpp  luaxx_property.cpp  luaxx_reference.cpp  multi_string.cpp  property.cpp  property2.cpp  property_bag.cpp  (+3 more)
src/server/: CMakeLists.txt  config.cxx  config.hxx  main.cxx  server_app.cxx  server_app.hxx
src/test-lib/: CMakeLists.txt  test_application.cxx  test_event_listener.cxx
src/testing/: CMakeLists.txt
tests/: CMakeLists.txt  assert.cpp  common.hpp  condition.cpp  exception.cpp  flags.cpp  inifile.cpp  log.cpp  lrucache.cpp  luaxx_class.cpp  luaxx_error.cpp  luaxx_exception.cpp  luaxx_int64.cpp  luaxx_interop.cpp  luaxx_metatable.cpp  luaxx_obj.cpp  luaxx_property.cpp  luaxx_reference.cpp  luaxx_selector.cpp  main.cpp  property.cpp  propertybag.cpp  sighandler.cpp  stringutil.cpp  tree.cpp  variant.cpp
tools/ping/: CMakeLists.txt  client_app.cxx  client_app.hxx  main.cxx  ping.hxx  runner_base.hxx  system_info.hxx
(+285 files in other folders)
